tests/asm/error/label_error_6_space_inside_arg_label.s
.name "zork"
.comment "I'M ]ALIIIIVE"


dog:	and %:dog  , :liv s, r1

live:	live %2

liv: live %1
